Download loinc on snowstorm container startup