@@ -10,15 +10,64 @@ ENV APP_HOME=/app
 # Set working directory
 WORKDIR $APP_HOME
 
-# Install net-tools and npm
+# Install tools and libraries necessary for puppeteer to work
 RUN apt-get update && apt-get install -y \
     net-tools \
     unzip \
-    npm \
+    ca-certificates \
+    curl \
+    fontconfig \
+    locales \
+    libatk1.0-0 \
+    libatk-bridge2.0-0 \
+    libcups2 \
+    libdrm2 \
+    libgbm1 \
+    libglib2.0-0 \
+    libgtk-3-0 \
+    libnspr4 \
+    libnss3 \
+    libpango-1.0-0 \
+    libx11-xcb1 \
+    libxcomposite1 \
+    libxdamage1 \
+    libxrandr2 \
+    libasound2 \
+    libxshmfence1 \
+    xdg-utils \
     && rm -rf /var/lib/apt/lists/*
 
-# Download the hl7 FHIR terminilogy package using npm
+# install npm & nodejs
+RUN curl -sL https://deb.nodesource.com/setup_18.x -o /tmp/nodesource_setup.sh  &&  \
+    bash /tmp/nodesource_setup.sh &&  \
+    apt-get install -y nodejs
+
+# Download the hl7 FHIR terminilogy package using npm to the /app directory
 RUN npm --registry https://packages.simplifier.net pack hl7.terminology.r4
+
+# Download the tool that will assist performing the LOINC import
+RUN curl -fsSL https://github.com/hapifhir/hapi-fhir/releases/download/v7.2.2/hapi-fhir-7.2.2-cli.zip -o hapi-fhir-cli.zip && \
+    unzip hapi-fhir-cli.zip
+
+# Copy Snowstorm JAR (you need to build it first with Maven)
+COPY target/snowstorm*.jar /app/snowstorm.jar
+
+# Testing purposes (import RF from disk)
+COPY international_sample.zip /app/international_sample.zip
+
+# Copy Snowstorm JAR (you need to build it first with Maven)
+COPY download_loinc.mjs /app/download_loinc.mjs
+
+# Install puppeteer for downloading the LOINC release file on container startup
+ENV PUPPETEER_CACHE_DIR=/app/.cache/puppeteer
+RUN npm i puppeteer
+
+# Expose application port
+EXPOSE 8080
+
+COPY entrypoint.sh $APP_HOME/entrypoint.sh
+
+RUN chmod +x $APP_HOME/entrypoint.sh
 
 # Create a non-root user
 RUN useradd -m -d $APP_HOME -s /bin/bash appuser
@@ -29,17 +78,4 @@ RUN chown -R appuser:appuser $APP_HOME
 # Switch to the non-root user
 USER appuser
 
-# Copy Snowstorm JAR (you need to build it first with Maven)
-COPY target/snowstorm*.jar /app/snowstorm.jar
-
-# Testing purposes (import RF from disk)
-COPY international_sample.zip /app/international_sample.zip
-
-# Expose application port
-EXPOSE 8080
-
-# Run the app
-ENTRYPOINT ["java", "-Xms2g", "-Xmx4g", "--add-opens", "java.base/java.lang=ALL-UNNAMED", "--add-opens", "java.base/java.util=ALL-UNNAMED", "-jar", "/app/snowstorm.jar"]
-
-# Using arguments that are likely to be customized
-CMD ["--elasticsearch.urls=http://es:9200","--snomed-version=http://snomed.info/sct/11000172109/version/20250315"]
+ENTRYPOINT ["/app/entrypoint.sh"]
